# shopify-credit-app

./: .env  .gitignore  README.md  commands.txt  db_dump.sql  package-lock.json  package.json  render.yaml  shopify.app.credit-app-partner.toml  shopify.app.toml  tsconfig.json  tsconfig.tsbuildinfo
backend/: Dockerfile  pyproject.toml  shopify.app.credit-app-partner.toml  shopify.app.toml  shopify.web.toml  test_review.py
backend/alembic/: env.py
backend/alembic/versions/: 0ae7f07d8683_upgrade_credit_and_installment_models.py  0fe78653f810_add_number_to_credit_installments.py  14b360727865_xxxx_soft_2.py  157176e33edf_add_credits_installments_payments_.py  1bdfad55d26c_initial_migration.py  21b2856a6c66_add_punctuality_tracking.py  24dd728df026_add_number_to_credit_installments.py  27d162d202c3_add_notes_to_credits.py  3682970fe596_xxxx_soft_3.py  36a8d6b69d54_add_merchant_payment_settings.py  4593319c2078_add_favorable_balance_to_customer.py  468396d3ef3c_create_audit_logs_table.py  4758d0e79b32_add_unique_constraint_to_payment_.py  5bb0b2aa8843_add_cancelado_to_paymentstatus_enum.py  5f8c42f5ac20_add_phone_to_customers.py  720ac11fef14_add_installments_covered_to_payment.py  7648f456739f_add_registrado_to_paymentstatus_enum.py  7e83d122d732_add_credit_items_table.py  83099fc7b9bf_cleanup_unused_columns_and_product_table.py  9059fb695362_add_status_to_credit_installments.py  95e9eaa4ab3a_refactor_customer_strict_fields_final.py  96059de166c1_add_merchant_id_to_auditlog.py  (+9 more)
backend/src/: find_test_data.py  main.py
backend/tasks/: fix_payment_duplicates.py
(+131 files in other folders)
